# everybuddy

./: asset-manifest.json  index.html  package.json
src/client/: deploy_everybuddy.js  init_everybuddy.js  match_everybuddy.js  show_everybuddy.js  zero_everybuddy.js
src/everybuddy-rust/: Cargo.toml  README.md
src/everybuddy-rust/src/: lib.rs
src/frontend-everybuddy/: package-lock.json  package.json
src/frontend-everybuddy/components/: Card.js  EveryBuddyGame.js  MemoryGame.js
src/frontend-everybuddy/pages/: index.js
src/frontend-everybuddy/src/: App.css  App.js  Card.js  EveryBuddyGame.js
static/js/: 2.cd558257.chunk.js  2.cd558257.chunk.js.map  3.0c516649.chunk.js  3.0c516649.chunk.js.map  main.07a65eaa.chunk.js  main.07a65eaa.chunk.js.map  main.29dffc08.chunk.js  main.29dffc08.chunk.js.map  main.2d8054ba.chunk.js  main.2d8054ba.chunk.js.map  main.56af46c4.chunk.js  main.56af46c4.chunk.js.map  main.6704f584.chunk.js  main.6704f584.chunk.js.map  main.8194469f.chunk.js  main.8194469f.chunk.js.map  main.83d8eca6.chunk.js  main.83d8eca6.chunk.js.map  runtime-main.8e76134b.js  runtime-main.8e76134b.js.map
