
# Note: This crate must be built using do.sh

[package]
name = "solana-bpf-everybuddy"
version = "0.0.1"
description = "A simple name server program written in Rust"
license = "Apache-2.0"
edition = "2018"

[features]
program = ["solana-sdk/program"]
default = ["program", "solana-sdk/default"]

[dependencies]
byteorder = "1.3"
remove_dir_all = "=0.5.0"
solana-sdk = { version = "1.3.14", default-features = false }
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1.0"

[dev-dependencies]
rand = { version = "0.7.0"}

[lib]
name = "solana_bpf_everybuddy"
crate-type = ["cdylib", "lib"]

